--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <main>
         <section class="home-section" id="home">
             <div class="home-text">
-                <h1>Hi, It's Sleepy here</h1>
-                <p><h3>I'm a Frontend/Backend Learner</h3></p>
+                <h1>Hi, It's <span>Sleepy</span></h1>
+                <p><h3>A <span>Frontend/Backend</span> Learner</h3></p>
                 <p>I am a new coder who started his journey of becoming a good web developer and app developer.</p>
 
                 <div class="social-links">
